# fapi_ER_U

./: .gitignore  README.md  books2.py  main.py  pyproject.toml  todos.db
TodoApp/: database.py  main.py  models.py  todosapp.db
TodoApp/routers/: auth.py  todos.py
data/: dict_db.py
models/: models.py
